Updated versions system, wrote test for VersionsConfig